# bombyx3d

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Engine.cpp  Engine.h  Game.cpp  Game.h  README.md  _config.yml  build-samples.py  build-tools.py  index.html  main.cpp  make  make.bat  project.yml  run.sh
core/: CMakeLists.txt  Core.cpp  Core.h  Game.cpp  Game.h  common.cpp  core.h  macros.h  project.yml
core/core/: Core.h
core/doc/: Logging.dox  Textures.dox
core/image/: SimpleImage.cpp  SimpleImage.h
core/interfaces/: IBlob.h  ICore.cpp  ICore.h  IEvent.cpp  IEvent.h  IFileReader.cpp  IFileReader.h  IFileSystem.cpp  IFileSystem.h  IGame.h  IImage.h  IImageFormatConverter.h  IInitializable.h  IInputStream.cpp  IInputStream.h  IMemoryMappedFile.h  IStream.cpp  IStream.h  ISystem.h  ITextureImage.h  ITextureLoader.h  ITextureSource.h  IUnknown.cpp  IUnknown.h  IViewport.h
core/interfaces/io/: IFileSystem.h  IInputStream.h  IMemoryMappedFile.h
core/interfaces/render/: IRenderTarget.h  IRenderer.h  IViewport.h  IViewportConfiguration.h  IViewportDelegate.h
core/interfaces/system/: ISystem.h  ISystemEventLoop.h
core/io/: FileSystemList.cpp  FileSystemList.h
core/io/files/: MemoryFile.cpp  MemoryFile.h  StaticMemoryFile.cpp  StaticMemoryFile.h  StdioFileReader.cpp  StdioFileReader.h
core/io/filesystems/: FileSystemList.h
core/io/streams/: BufferedInputStream.cpp  BufferedInputStream.h  FileInputStream.cpp  FileInputStream.h  StaticMemoryInputStream.cpp  StaticMemoryInputStream.h
core/math/: AffineTransform.h  Quad.h
core/private/: Core.cpp  Core.h
core/render/: ViewportConfiguration.cpp  ViewportConfiguration.h
core/resource/: Texture.h  TextureSourceFile.cpp  TextureSourceFile.h
core/utility/: FunctionQueue.cpp  FunctionQueue.h  MatrixStack.cpp  MatrixStack.h  Ptr.cpp  Ptr.h  TypeID.h  debug.cpp  debug.h  io.cpp  io.h  macros.h  string.cpp  string.h
engine/: CMakeLists.txt  Engine.cpp  Engine.h  Game.cpp  Game.h  main.cpp
engine/cmake/: Engine.cmake  EnumOption.cmake  OpenGL.cmake  TargetPlatform.cmake
engine/core/: Application.cpp  Application.h  Atom.h  AtomTable.cpp  AtomTable.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  Log.cpp  Log.h  ResourceManager.cpp  ResourceManager.h  Services.cpp  Services.h  StringUtils.cpp  StringUtils.h  macros.h
engine/image/: Image.cpp  Image.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h
engine/image/loaders/: CMakeLists.txt
engine/input/: InputManager.cpp  InputManager.h  Key.h  MouseButton.h  TouchEvent.h
engine/interfaces/core/: IApplication.h  IEvent.h  IEventDispatcher.h  IEventObserver.h  (+3 more)
engine/io/: FileSystem.h  FileSystemList.h
engine/material/: Material.cpp  Material.h  MaterialPass.cpp  MaterialPass.h  MaterialTechnique.cpp  MaterialTechnique.h  ShaderLoader.cpp  ShaderLoader.h
engine/math/: AffineTransform.cpp  AffineTransform.h  AspectRatio.h  Axis.h  BoundingBox.cpp  BoundingBox.h  Direction.h  Quad.h
engine/mesh/: Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  MeshElement.cpp  MeshElement.h  RawMeshData.cpp  RawMeshData.h  RawMeshElementData.h  VertexFormat.h
engine/opengl/: GLBuffer.h  GLProgram.cpp  GLProgram.h  GLShader.cpp  GLTexture.cpp  GLTexture.h
engine/platform/: CMakeLists.txt  PlatformCallbacks.h  PlatformInitOptions.h
engine/render/: Buffer.cpp  Buffer.h  Canvas.cpp  Canvas.h  ImmediateModeRenderer.cpp  ImmediateModeRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  VertexSource.cpp  VertexSource.h  opengl.cpp  opengl.h
engine/renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/scene/: AbstractLayoutStrategy.cpp  AbstractLayoutStrategy.h  AbstractLoadingScene.cpp  AbstractLoadingScene.h  AbstractScene.cpp  AbstractScene.h  AbstractSceneComponent.cpp  AbstractSceneComponent.h  LayeredScene.cpp  LayeredScene.h  LoadingScene.cpp  LoadingScene.h  SceneManager.cpp  SceneManager.h
engine/sprites/: Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h
engine/ui/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIImage.cpp  UIImage.h  UIProgressBar.cpp  UIProgressBar.h  UIScene.cpp  UIScene.h
engine/utility/: FileUtils.cpp  FileUtils.h  FunctionQueue.cpp  MatrixStack.cpp  MatrixStack.h  MemoryPool.cpp  MemoryPool.h  ObserverList.h  PoolAllocator.h  ProducerConsumerQueue.cpp  ProducerConsumerQueue.h  RenderUtils.h  ScopedCounter.h  Singleton.h  StringUtils.cpp  StringUtils.h  TypeID.h  WorkerThread.cpp  WorkerThread.h  XmlUtils.h  YamlParser.cpp  debug.cpp  debug.h
libs/: CMakeLists.txt
libs/angle/: CMakeLists.txt  FileList.cmake  pch.h
libs/assimp/: CMakeLists.txt  LICENSE
libs/boost/: CMakeLists.txt  boost.cpp
libs/bzip2/: CMakeLists.txt  bzlib.h
libs/cppunit/: project.yml
libs/cvtutf/: CMakeLists.txt  readme.txt
libs/glew/: CMakeLists.txt
libs/glfw/: CMakeLists.txt
libs/glm/: CMakeLists.txt
libs/irrxml/: CMakeLists.txt  LICENSE
libs/jpeglib/: CMakeLists.txt
libs/libpng/: CMakeLists.txt  project.yml
libs/minizip/: CMakeLists.txt  iowin32.c  minizip.c  project.yml  unzip.c  zip.h
libs/pegtl/: CMakeLists.txt  pegtl.cpp
libs/poly2tri/: CMakeLists.txt
libs/tinyxml/: CMakeLists.txt  tinyxml.h
libs/zlib/: CMakeLists.txt  LICENSE  project.yml
samples/1.match3/: CMakeLists.txt  Game.cpp  Game.h  Match3Field.cpp  Match3View.cpp  Match3View.h  project.yml
system/: CMakeLists.txt  main.h  project.yml
system/dummy/: CMakeLists.txt  DummySystem.cpp  DummySystem.h  common.cpp
system/qt5/: CMakeLists.txt  QtSystem.cpp  QtSystem.h  common.cpp  macros.h  main.cpp  project.yml
tools/resbuild/: BinaryFileBuilder.cpp  BinaryFileBuilder.h  BuildDirectory.cpp  BuildDirectory.h  BuildProgressWidget.cpp  BuildProgressWidget.h  Builder.cpp  Builder.h  BuilderFactory.cpp  BuilderFactory.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewRuleDialog.cpp  NewRuleDialog.h  Project.cpp  Project.h  Rule.cpp  Rule.h  main.cpp
tools/uieditor/: CMakeLists.txt  Info.plist.in  main.cpp
(+991 files in other folders)
